@@ -36,6 +36,9 @@
 #if PLATFORM(QT)
 #include <QFile>
 #include <QLibrary>
+#if defined(Q_OS_WIN32)
+#include <windows.h>
+#endif
 #endif
 
 #include <time.h>
@@ -72,10 +75,34 @@ struct PlatformModuleVersion {
 
 };
 #elif PLATFORM(QT)
+
 typedef QFile* PlatformFileHandle;
-typedef QLibrary* PlatformModule;
 const PlatformFileHandle invalidPlatformFileHandle = 0;
+#if defined(Q_WS_X11)
+typedef QLibrary* PlatformModule;
 typedef unsigned PlatformModuleVersion;
+#endif
+#if defined(Q_OS_WIN32)
+typedef HMODULE PlatformModule;
+struct PlatformModuleVersion {
+    unsigned leastSig;
+    unsigned mostSig;
+
+    PlatformModuleVersion(unsigned)
+        : leastSig(0)
+        , mostSig(0)
+    {
+    }
+
+    PlatformModuleVersion(unsigned lsb, unsigned msb)
+        : leastSig(lsb)
+        , mostSig(msb)
+    {
+    }
+
+};
+#endif
+
 #else
 typedef int PlatformFileHandle;
 #if PLATFORM(GTK)
